<resources>
    <string name="app_name">Podcast Playlists</string>
    <string name="all_playlists">See All Playlists</string>
    <string name="my_playlists">See My Playlists</string>
    <string name="all_podcasts">See All Podcasts</string>
    <string name="view">View</string>
    <string name="view_edit_delete">View/Edit/Delete</string>
    <string name="sign_out">Sign Out</string>
    <string name="pl_name_label">Name</string>
    <string name="pl_owner_label">Owner</string>
    <string name="pl_description_label">Description</string>
    <string name="pl_podcast_label">Podcasts</string>
    <string name="pl_endorsements_label">Endorsements</string>
    <string name="pl_add_endorsement">Add Endorsement</string>
    <string name="pl_comments_label">Comments</string>
    <string name="pl_add_comment">Add Comment</string>
    <string name="pl_new_comment_label">New Comment:</string>
    <string name="comment_problem">Problem creating comment</string>
    <string name="submit">Submit</string>
    <string name="pl_new_endorsement_label">Username for Endorsement:</string>
    <string name="endorsement_problem">Problem creating endorsement</string>
    <string name="new_playlist">Create New Playlist</string>
    <string name="new_podcast">Add New Podcast</string>
    <string name="podcast_title_label">Podcast Title*</string>
    <string name="podcast_description_label">Description</string>
    <string name="podcast_genre_label">Genre</string>
    <string name="podcast_num_episodes_label">Number of Episodes</string>
    <string name="podcast_num_seasons_label">Number of Seasons</string>
    <string name="podcast_still_active_label">Still Active?</string>
    <string name="podcast_yes_still_active">Yes</string>
    <string name="podcast_no_still_active">No</string>
    <string name="podcast_create_error">Error in creating podcast</string>
    <string name="missing_required_field">Missing Required Field</string>
    <string name="name_already_taken">This playlist name is already being used. Please choose another name.</string>
    <string name="podcast_title_required">The podcast title is a required field.</string>
    <string name="playlist_name_required">The playlist name is a required field.</string>
    <string name="ok">OK</string>
    <string name="edit_podcast">Edit Podcast</string>
    <string name="delete_podcast">Delete Podcast</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="return_home">Home Page</string>
    <string name="pod_title_label">Title</string>
    <string name="pod_genre_label">Genre</string>
    <string name="pod_tot_ratings_label">Number of Ratings</string>
    <string name="pod_avg_rating_label">Average Rating</string>
    <string name="rate_podcast">Rate Podcast</string>
    <string name="pod_active_label">Still Active?</string>
    <string name="pod_num_episodes_label">Number of Episodes</string>
    <string name="pod_num_seasons_label">Number of Seasons</string>
    <string name="pod_description_label">Description</string>
    <string name="pod_playlists_label">Playlists Containing this Podcast</string>
    <string name="rate_podcast_label">Rate the podcast on a scale of 1 to 5 with 5 being the best and 1 being the worst</string>
    <string name="rating_error_label">Error saving your rating to the database</string>
    <string name="confirm_delete">Are you sure you want to delete this podcast?</string>
    <string name="confirm_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="yes_delete">Yes</string>
    <string name="no_delete">Cancel Delete</string>
    <string name="del_msg_negative">Delete of podcast was not successful</string>
    <string name="del_msg_positive">Podcast was successfully deleted</string>
    <string name="del_msg_negative_playlist">Delete of playlist was not successful</string>
    <string name="del_msg_positive_playlist">Playlist was successfully deleted</string>
    <string name="server_client_id">587366584718-kso5r22p2aumv3e498ja5kll75a3g2tn.apps.googleusercontent.com</string>
    <string name="create_playlist_name_label">"Playlist Name*"</string>
    <string name="create_playlist_access_label">"Who can edit this playlist?</string>
    <string name="only_me">Only Me</string>
    <string name="anyone">Anyone</string>
    <string name="submit_and_enter_podcasts">Submit and Enter Podcasts</string>
    <string name="create_playlist_owner_label">Owner Name</string>
    <string name="instr_str">Choose which podcast to add</string>
    <string name="submit_podcasts_button_str">Save Podcasts to Playlist</string>
    <string name="playlist_create_error">Error in creating playlist</string>
</resources>
