<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPodcast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateNewPodcast"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/podcastTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/podcast_title_label"/>

            <EditText
                android:id="@+id/podcastTitle"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/podcastGenreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/podcast_genre_label"/>

            <EditText
                android:id="@+id/podcastGenre"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/podcastNumEpisodesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/podcast_num_episodes_label"/>

            <EditText
                android:id="@+id/podcastNumEpisodes"
                android:ems="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/podcastNumSeasonsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/podcast_num_seasons_label"/>

            <EditText
                android:id="@+id/podcastNumSeasons"
                android:ems="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/podcastStillActiveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/podcast_still_active_label"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/podcastYesStillActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/podcast_yes_still_active"/>
                <RadioButton android:id="@+id/podcastNoStillActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/podcast_no_still_active"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/podcastDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/podcast_description_label"/>

            <EditText
                android:id="@+id/podcastDescription"
                android:ems="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textAutoCorrect"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/submitNewPodcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/podcastCreateError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            android:text="@string/podcast_create_error"/>

    </LinearLayout>
</ScrollView>
